--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
   <title>jakpat minecraft server</title>
+<meta content="Embed Title" property="og:title" />
+<meta content="jakpat minecraft server" property="og:description" />
+<meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+<meta content="https://embed.com/embedimage.png" property="og:image" />
+<meta content="#31A2F2" data-react-helmet="true" name="theme-color" />
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="refresh" content="600">
   <link href="output.css" rel="stylesheet">
