--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class=" text-3xl"><span class="font-semibold server-status" id="player-count">00</span> Players Online</div>
   <style>
     body {
-      background-image: url('');
+      background-image: url('background.png');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: cover;
