--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="main">
     <div class="center-container">
-        <img src="block.png" class="h-36 w-36" id="server-icon"/>
+        <img class="h-36 w-36" id="server-icon"/>
         <div class="flex flex-col ">
             <h1 class="text-7xl font-medium text-white-800 mb-5" id="server-ip">jakpat.aternos.me</h1>
             <span class="text-gray-300 text-lg mb-3 server-online" id="motd" style="font-size: 1.5rem;">Offline</span>
