--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
         :root { scroll-behavior: smooth; }
         body {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('jakpat-MC_Logo.png');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('jakpat-MC_Logo-no-text.png');
             background-repeat: no-repeat; background-attachment: fixed; background-size: cover; background-position: center;
             margin: 0; color: white; font-family: ui-sans-serif, system-ui, sans-serif;
         }
@@ -176,4 +176,5 @@
         setInterval(updateStatus, 30000);
     </script>
 </body>
+
 </html>
