--- a/index.html
+++ b/index.html
@@ -102,28 +102,43 @@
     </div>
 
     <div id="rules" class="rules-section">
-        <h2 class="text-3xl font-bold mb-10 text-center text-red-500">SERVER RULES</h2>
+        <h2 class="text-3xl font-bold mb-10 text-center text-red-500 uppercase tracking-widest">Server & Community Rules</h2>
         <div class="grid md:grid-cols-2 gap-12">
-            <div class="space-y-6">
+            <div class="space-y-8">
                 <div>
-                    <h3 class="text-xl font-bold text-blue-400 mb-2">1. Conduct</h3>
-                    <p class="text-gray-300 italic text-sm md:text-base">Respect all players. Toxicity is not allowed. We are a friendly community, so respect that and be nice.</p>
+                    <h3 class="text-xl font-bold text-blue-400 mb-2">1. Conduct & Respect</h3>
+                    <p class="text-gray-300 text-sm md:text-base leading-relaxed">
+                        Treat everyone with dignity. We have zero tolerance for toxicity, bullying, or hate speech (sexism, racism, etc.). Keep it PG-13—no NSFW or disturbing content.
+                    </p>
                 </div>
                 <div>
                     <h3 class="text-xl font-bold text-blue-400 mb-2">2. Fair Play</h3>
-                    <p class="text-gray-300 italic text-sm md:text-base">No hacking or unfair clients.</p>
+                    <p class="text-gray-300 text-sm md:text-base leading-relaxed">
+                        No hacking, X-ray, or unfair clients. We keep the game fair for everyone. Please report any bugs or exploits to the staff instead of using them.
+                    </p>
                 </div>
             </div>
-            <div class="space-y-6">
+            <div class="space-y-8">
                 <div>
-                    <h3 class="text-xl font-bold text-blue-400 mb-2">3. Griefing</h3>
-                    <p class="text-gray-300 italic text-sm md:text-base">No destroying builds and stealing.</p>
+                    <h3 class="text-xl font-bold text-blue-400 mb-2">3. Griefing & Theft</h3>
+                    <p class="text-gray-300 text-sm md:text-base leading-relaxed">
+                        Respect the work of others. No destroying builds or stealing items, whether the land is claimed or unclaimed.
+                    </p>
                 </div>
                 <div>
-                    <h3 class="text-xl font-bold text-blue-400 mb-2">4. Advertising</h3>
-                    <p class="text-gray-300 italic text-sm md:text-base">Do not promote other servers.</p>
+                    <h3 class="text-xl font-bold text-blue-400 mb-2">4. Advertising & Spam</h3>
+                    <p class="text-gray-300 text-sm md:text-base leading-relaxed">
+                        Do not promote other servers, Discord links, or outside websites. Avoid spamming chat to keep it readable for everyone.
+                    </p>
                 </div>
             </div>
+        </div>
+        
+        <div class="mt-12 pt-8 border-t border-white/10 text-center">
+            <p class="text-gray-400 text-sm italic">
+                Staff reserve the right to handle behavior that is harmful to the community. 
+                If you feel unsafe, please contact an administrator immediately.
+            </p>
         </div>
     </div>
 
@@ -176,6 +191,4 @@
         setInterval(updateStatus, 30000);
     </script>
 </body>
-
 </html>
-
