--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="version-text">Java 1.21.10+</div>
                 <div class="block">
                     <h1 id="server-ip" class="hover:text-red-500 cursor-pointer" onclick="copyIP()">
-                        jakpat-mc.duckdns.org
+                        jakpat-mc.duckdns.org:51490
                     </h1>
                 </div>
                 
@@ -192,3 +192,4 @@
     </script>
 </body>
 </html>
+
