--- a/index.html
+++ b/index.html
@@ -37,17 +37,16 @@
             background: rgba(0, 0, 0, 0.85); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px);
             border-radius: 28px; border: 1px solid rgba(255, 255, 255, 0.1); 
             box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.9); width: 100%; max-width: 950px;
-            margin-top: 100px; /* Gap between sections like Info and Rules */
+            margin-top: 100px; 
         }
 
-        /* FIRST GLASS PANEL - Kept the 160px gap from the main card to the next section */
+        /* FIRST GLASS PANEL GAP (160px) */
         .main-card { 
             display: flex; flex-direction: row; align-items: center; gap: 2.5rem; padding: 3rem; 
-            margin-top: 200px; /* Gap from top of page */
-            margin-bottom: 60px; /* Additional push to ensure the 160px total gap */
+            margin-top: 200px; 
+            margin-bottom: 60px; 
         }
         
-        /* Special handling to restore the 160px gap after the first card */
         .main-card + .glass-panel { margin-top: 160px; }
 
         #minimal-terminal[style*="display: block"] + .main-card { margin-top: 80px; }
@@ -65,7 +64,7 @@
         .version-text { display: inline-block; border: 1px solid rgba(255, 255, 255, 0.15); padding: 2px 10px; border-radius: 6px; font-size: 0.7rem; font-weight: 700; color: #9ca3af; text-transform: uppercase; letter-spacing: 0.05em; }
 
         .wip-badge { background: #3b82f6; color: white; padding: 2px 10px; border-radius: 6px; font-size: 0.7rem; font-weight: 800; margin-left: 12px; }
-        .copy-feedback { font-size: 0.85rem; color: #6b7280; margin-top: -8px; margin-bottom: 1.5rem; height: 1.25rem; cursor: pointer; }
+        .copy-feedback { font-size: 0.85rem; color: #6b7280; margin-top: -8px; margin-bottom: 1.5rem; height: 1.25rem; cursor: pointer; transition: color 0.3s; }
         .discord-btn { background-color: #5865F2; }
 
         .footer-area { margin: 120px 0; text-align: center; width: 100%; }
@@ -193,13 +192,42 @@
     </div>
 
     <script>
-        // --- CONFIGURATION ---
         const YOUTUBE_ID = ""; // LEAVE EMPTY TO HIDE
-        // ---------------------
 
         const ipText = "jakpat-mc.duckdns.org:51490";
         const ipBase = "jakpat-mc.duckdns.org";
         const port = "51490";
+
+        function copyIP() {
+            if (navigator.clipboard && window.isSecureContext) {
+                navigator.clipboard.writeText(ipText).then(showSuccess).catch(() => fallbackCopy(ipText));
+            } else {
+                fallbackCopy(ipText);
+            }
+        }
+
+        function fallbackCopy(text) {
+            const textArea = document.createElement("textarea");
+            textArea.value = text;
+            textArea.style.position = "fixed";
+            textArea.style.left = "-9999px";
+            textArea.style.top = "0";
+            document.body.appendChild(textArea);
+            textArea.focus();
+            textArea.select();
+            try { document.execCommand('copy'); showSuccess(); } catch (e) {}
+            document.body.removeChild(textArea);
+        }
+
+        function showSuccess() {
+            const feedback = document.getElementById('copy-text');
+            feedback.innerHTML = "✓ IP Copied!";
+            feedback.style.color = "#4ade80";
+            setTimeout(() => { 
+                feedback.innerHTML = "Click IP to copy"; 
+                feedback.style.color = "#6b7280";
+            }, 2500);
+        }
 
         function setupTrailer() {
             const section = document.getElementById('trailer-section');
@@ -249,12 +277,6 @@
                 }
                 fitText(); 
             } catch (err) { }
-        }
-
-        function copyIP() {
-            navigator.clipboard.writeText(ipText);
-            document.getElementById('copy-text').innerHTML = "✓ IP Copied!";
-            setTimeout(() => { document.getElementById('copy-text').innerHTML = "Click IP to copy"; }, 2500);
         }
 
         window.addEventListener('load', () => { 
