Update index.html (Added jakpat button.)

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         .wip-badge { background: #3b82f6; color: white; padding: 2px 10px; border-radius: 6px; font-size: 0.7rem; font-weight: 800; margin-left: 12px; }
         .copy-feedback { font-size: 0.85rem; color: #6b7280; margin-top: -8px; margin-bottom: 1.5rem; height: 1.25rem; cursor: pointer; transition: color 0.3s ease; }
         .discord-btn { background-color: #5865F2; }
+        .jakpat-btn { background-color: #7a1dbd; }
 
         .footer-area { margin: 120px 0; text-align: center; width: 100%; }
         .back-to-top { color: #9ca3af; text-decoration: none; font-weight: bold; font-size: 0.9rem; transition: color 0.3s; }
@@ -111,6 +112,7 @@
                 </div>
 
                 <div class="flex flex-wrap justify-center md:justify-start gap-3 mt-8">
+                    <a href="http://jakpat.duckdns.org" target="_blank" class="discord-btn px-6 py-3 rounded-lg font-bold shadow-lg text-sm transition hover:-translate-y-0.5">JAKPAT</a>
                     <a href="https://discord.gg/wqJZUdjfAw" target="_blank" class="discord-btn px-6 py-3 rounded-lg font-bold shadow-lg text-sm transition hover:-translate-y-0.5">JOIN DISCORD</a>
                     <a href="#info" class="px-6 py-3 border border-white/20 hover:bg-white/10 rounded-lg font-bold text-sm">SERVER INFO</a>
                     <a href="#rules" class="px-6 py-3 border border-white/20 hover:bg-white/10 rounded-lg font-bold text-sm">VIEW RULES</a>
@@ -286,3 +288,4 @@
     </script>
 </body>
 </html>
+
