Update index.html (jakpat button color fix.)

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="flex flex-wrap justify-center md:justify-start gap-3 mt-8">
-                    <a href="http://jakpat.duckdns.org" target="_blank" class="discord-btn px-6 py-3 rounded-lg font-bold shadow-lg text-sm transition hover:-translate-y-0.5">JAKPAT</a>
+                    <a href="http://jakpat.duckdns.org" target="_blank" class="jakpat-btn px-6 py-3 rounded-lg font-bold shadow-lg text-sm transition hover:-translate-y-0.5">JAKPAT</a>
                     <a href="https://discord.gg/wqJZUdjfAw" target="_blank" class="discord-btn px-6 py-3 rounded-lg font-bold shadow-lg text-sm transition hover:-translate-y-0.5">JOIN DISCORD</a>
                     <a href="#info" class="px-6 py-3 border border-white/20 hover:bg-white/10 rounded-lg font-bold text-sm">SERVER INFO</a>
                     <a href="#rules" class="px-6 py-3 border border-white/20 hover:bg-white/10 rounded-lg font-bold text-sm">VIEW RULES</a>
@@ -288,4 +288,5 @@
     </script>
 </body>
 </html>
+
 
